--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -40,7 +40,7 @@ block content
               .col-lg-offset-2.col-lg-10.col-md-offset-3.col-md-9.col-sm-offset-4.col-sm-8
                 button.btn.btn-default(type="submit", data-bind="click: submitStation") Submit
   br
-  .container-fluid(data-bind="template: {name: 'room-template', foreach: vm.rooms(), as: 'roomId'}")
+  .container-fluid(data-bind="template: {name: 'room-template', foreach: vm.rooms, as: 'roomId'}")
     
   script#room-template(type="text/html")
     .panel.panel-primary
