updated status display and added bootstrap

--- a/templates/layouts/base.jade
+++ b/templates/layouts/base.jade
@@ -2,7 +2,7 @@ doctype html
 html
   head
     title= title
-    link(href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css", rel="stylesheet")
+    link(href="/vendor/bootstrap-3.3.1/css/bootstrap.min.css", rel="stylesheet")
     link(href="/vendor/bootstrap3-editable-1.5.1/bootstrap3-editable/css/bootstrap-editable.css", rel="stylesheet")
     
       
@@ -15,7 +15,7 @@ html
       
       
     script(src="/vendor/jquery-2.0.3.min.js")
-    script(src="/vendor/bootstrap-3.2.0.min.js")
+    script(src="/vendor/bootstrap-3.3.1/js/bootstrap.min.js")
     
     script(src="/vendor/knockout-3.2.0.js")
     script(src="/vendor/knockout.mapping-latest.js")
