--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -167,35 +167,32 @@ block content
               dt Roles
               dd(data-bind="with: {roles: station.settings.roles || [], macaddress: station.settings.macaddress()}")
                 span(data-bind="editable: roles, editableOptions: {display: roleDisplay, type: 'checklist', source: availableRoles, pk: 'unused', name: 'unused', url: '/api/station/' + macaddress + '/partial', params: {key: 'settings.roles'}}")
-              dt Status 
-              dd
-                ul.list-unstyled
-                  div(data-bind="foreach: {data: activeStatus(station) || [], as:status}")
-                    li
-                      // ko if: running
-                      span.glyphicon.glyphicon-thumbs-up
-                      | 
-                      // /ko
-                      // ko if: !running
-                      span.glyphicon.glyphicon-thumbs-down
-                      | 
-                      // /ko
-                      // ko if: type == 'internal'
-                      Strong {{name}}
-                      | 
-                      // /ko
-                      // ko if: type !== 'internal'
-                      Strong {{type}} 
-                      | 
-                      // /ko
-                      // ko if: !running
-                      | - 
-                      small {{status}}
-                      | 
-                      // /ko
-                      // ko if: status == 'starting'
-                      span.fa.fa-spinner.fa-spin
-                      | 
-                      // /ko
+            dt Status 
+            dd
+              ul.list-unstyled
+                div(data-bind="foreach: {data: activeStatus(station) || [], as:'device'}")
+                  li
+                    | {{runcount}} 
+                    // ko if: running
+                    span.glyphicon.glyphicon-thumbs-up
+                    // /ko
+                    // ko ifnot: running
+                    span.glyphicon.glyphicon-thumbs-down
+                    // /ko
+                    |  
+                    strong {{id}} 
+                    |  
+                    small {{type}}
+                    |  
+                    span.label.label-info {{state}}
+                    // ko ifnot: running
+                    |  
+                    small {{status}}
+                    | 
+                    // /ko
+                    // ko if: status() == 'starting'
+                    span.fa.fa-spinner.fa-spin
+                    | 
+                    // /ko
 
     // /ko
